src/test/ui/impl-trait/hidden-lifetimes.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/hidden-lifetimes.rs:28:54
   |
LL | fn hide_ref<'a, 'b, T: 'static>(x: &'a mut &'b T) -> impl Swap + 'a {
   |                                                      ^^^^^^^^^^^^^^
   |
note: hidden type `&'a mut &'b T` captures the lifetime 'b as defined on the function body at 28:17
  --> $DIR/hidden-lifetimes.rs:28:17
   |
LL | fn hide_ref<'a, 'b, T: 'static>(x: &'a mut &'b T) -> impl Swap + 'a {
   |                 ^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/hidden-lifetimes.rs:45:70
   |
LL | fn hide_rc_refcell<'a, 'b: 'a, T: 'static>(x: Rc<RefCell<&'b T>>) -> impl Swap + 'a {
   |                                                                      ^^^^^^^^^^^^^^
   |
note: hidden type `std::rc::Rc<std::cell::RefCell<&'b T>>` captures the lifetime 'b as defined on the function body at 45:24
  --> $DIR/hidden-lifetimes.rs:45:24
   |
LL | fn hide_rc_refcell<'a, 'b: 'a, T: 'static>(x: Rc<RefCell<&'b T>>) -> impl Swap + 'a {
   |                        ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0700`.
